[project]
name = "python-seamless"
authors = [
  { name="Xpo Development", email="dev@xpo.dev" },
]
description = "A Python package for creating and manipulating HTML components. It is working similar to React.js, but in Python"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/xpodev/seamless"
Issues = "https://github.com/xpodev/seamless/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["seamless*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
seamless = ["**/*.js"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr="seamless.__version__"}
